# openFrameworks

./: .gitignore  install_of.sh  libs.sh  update.command
.github/: build-android.yml
.github/workflows/: build-linux.yml  build-linux64.yml  of.yml
.github/workflows/2/: build-emscripten.yml
addons/: .gitignore
addons/ofMath/src/: ofVectorMath.h
addons/ofxAssimp/: addon_config.mk
addons/ofxAssimp/src/: ofxAssimpMesh.cpp  ofxAssimpScene.cpp  ofxAssimpUtils.h
addons/ofxAssimpModelLoader/: addon_config.mk
addons/ofxAssimpModelLoader/src/: ofxAssimpMeshHelper.h  ofxAssimpModelLoader.cpp  ofxAssimpModelLoader.h  ofxAssimpUtils.h
addons/ofxBoost/: addon_config.mk
addons/ofxCairo/: addon_config.mk
addons/ofxCairo/src/: ofCairoRenderer.cpp  ofxCairo.h
addons/ofxEmscripten/src/: ofxAppEmscriptenWindow.cpp
addons/ofxGui/src/: ofxColorPicker.cpp  ofxColorPicker.h  ofxGuiGroup.cpp
addons/ofxKinect/: addon_config.mk
addons/ofxMath/src/: ofVectorMath.h  ofxMath.h
addons/ofxOpenCv/: addon_config.mk
addons/ofxOpenCv/src/: ofxCvColorImage.h  ofxCvImage.cpp  ofxCvImage.h
addons/ofxSvg/: addon_config.mk
addons/ofxURL/: addon_config.mk
examples/templates/allAddonsExample/: addons.make
libs/: libs.command  libs.sh
libs/openFrameworks/: compile_flags.txt  ofMain.h  ofMainLite.h
libs/openFrameworks/3d/: ofMesh.h  (+9 more)
ofGen/: .gitignore  CMakeLists.txt  Makefile  compile.sh  compile_flags.txt  install.sh  readme.md  uninstall.sh
ofGen/.zed/: settings.json  tasks.json
ofGen/src/: addons.cpp  addons.h  functions.h  leftovers.h  leftovers.txt  main.cpp  structs.h  templates.cpp  templates.h  utils.cpp  utils.h
rpi/: compile.sh  install.sh  libs.sh  multistrap.conf
scripts/: tests.sh
scripts/macos/: cc.sh  libs.sh  tests.sh  xcode_project.sh
(+184 files in other folders)
